--- a/style.css
+++ b/style.css
@@ -3,3 +3,10 @@
   padding: 0;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
+
+body {
+  display: flex;
+  flex-direction: row;
+  height: 100vh;
+  width: 100%;
+}
