--- a/style.css
+++ b/style.css
@@ -15,3 +15,9 @@ img {
   width: 50px;
   border-radius: 30px;
 }
+
+.container {
+  display: flex;
+  background-color: white;
+  height: 100vh;
+}
