--- a/style.css
+++ b/style.css
@@ -23,13 +23,17 @@ img {
 }
 
 .search {
-  margin-bottom: 20px;
-  border-radius: 5px;
+  margin-bottom: 10px;
   padding: 5px;
+  margin-left: 20px;
   margin-right: 5px;
   width: 100%;
-  cursor: pointer;
-  border: 2px solid rgb(193, 191, 191);
+  border-radius: 5px;
+  border-width: 0.5px;
+  border-color: grey;
+  color: grey;
+  margin-top: 15px;
+
 }
 
 .sidebar {
@@ -40,5 +44,17 @@ img {
 
 .contact {
   display: flex;
-  gap: 10px;
+  align-items: center;
+  white-space: nowrap;
+  max-width: 80%;
+  padding-left: 10px;
+  padding-right: 80px;
+  margin: 0;
 }
+
+.contact:hover {
+  background-color: rgb(237, 228, 228);
+
+}
+
+.contact-list {}
