--- a/style.css
+++ b/style.css
@@ -57,4 +57,14 @@ img {
 
 }
 
+.status {
+  font-size: 12px;
+  color: #646363;
+}
+
+.status::before {
+  content: "•";
+  color: red;
+}
+
 .contact-list {}
