--- a/style.css
+++ b/style.css
@@ -57,7 +57,8 @@ img {
 
 }
 
-.status {
+.status,
+.status-online {
   font-size: 12px;
   color: #646363;
 }
@@ -65,6 +66,11 @@ img {
 .status::before {
   content: "•";
   color: red;
+}
+
+.status-online::before {
+  content: "•";
+  color: green;
 }
 
 .contact-list {}
