--- a/style.css
+++ b/style.css
@@ -74,8 +74,7 @@ img {
 }
 
 .chat-messages {
-  background-color: #f6f8f9;
-  height: 80%;
+  height: 100%;
   flex-direction: column;
   margin-bottom: 10px;
   display: flex;
@@ -106,4 +105,29 @@ img {
   background-color: #b7f6c3;
   border-radius: 10px;
   white-space: nowrap;
+}
+
+input {
+  width: 100%;
+  padding: 5%;
+
+}
+
+.chat-footer {
+  display: flex;
+  width: auto;
+  gap: 10px;
+}
+
+.margin-top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.chat-header {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+  padding: 20px;
 }
