--- a/style.css
+++ b/style.css
@@ -28,12 +28,12 @@ img {
   border-width: 0.5px;
   border-color: grey;
   color: grey;
-  margin-top: 15px;
+  margin-top: none;
 
 }
 
 .sidebar {
-  padding: 40px;
+  padding: 30px;
   width: 20%;
   border-right: 2px solid rgb(117, 116, 116);
 }
@@ -76,9 +76,18 @@ img {
 .chat-messages {
   height: 100%;
   flex-direction: column;
-  margin-bottom: 10px;
+  margin-bottom: 50px;
   display: flex;
+  background-color: aquamarine;
 
+
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  margin-right: 10px;
 }
 
 .message-sent {
@@ -86,6 +95,7 @@ img {
   margin-bottom: 0px;
   margin-left: auto;
   margin-right: 2px;
+  margin-top: 4px;
   gap: 15px;
   padding: 7px;
   background-color: #dff0f6;
@@ -115,9 +125,11 @@ input {
 
 .chat-footer {
   display: flex;
-  width: auto;
-  gap: 10px;
+  width: 100%;
+  align-items: center;
+  margin-top: none;
 }
+
 
 .margin-top {
   display: flex;
@@ -130,4 +142,17 @@ input {
   gap: 10px;
   align-items: center;
   padding: 20px;
+}
+
+.time {
+  font-size: 12px;
+  color: #646363;
+}
+
+button {
+  background: none;
+  border: none;
+  font-size: 15px;
+  padding: 1px;
+  cursor: pointer;
 }
