--- a/style.css
+++ b/style.css
@@ -117,17 +117,21 @@ main {
   white-space: nowrap;
 }
 
-input {
-  width: 100%;
-  padding: 5%;
-
-}
 
 .chat-footer {
   display: flex;
-  width: 100%;
+  flex-direction: row;
   align-items: center;
-  margin-top: none;
+
+}
+
+input {
+  width: 100%;
+  height: 20px;
+  font-size: 10px;
+  padding-left: 10px;
+  border-radius: 10px;
+
 }
 
 
