--- a/style.css
+++ b/style.css
@@ -33,9 +33,11 @@ img {
 }
 
 .sidebar {
-  padding: 30px;
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-bottom: 30px;
   width: 20%;
-  border-right: 2px solid rgb(117, 116, 116);
+  border-right: 2px solid rgb(148, 146, 146);
 }
 
 .contact {
@@ -50,6 +52,7 @@ img {
 
 .contact:hover {
   background-color: rgb(237, 228, 228);
+  width: auto;
 
 }
 
@@ -69,16 +72,17 @@ img {
   color: green;
 }
 
-.chat {
-  flex: auto;
-}
+
 
 .chat-messages {
   height: 100%;
   flex-direction: column;
-  margin-bottom: 50px;
+  margin-bottom: 10px;
   display: flex;
   background-color: aquamarine;
+  border-top: 2px solid rgb(176, 174, 174);
+  border-bottom: 2px solid rgb(173, 170, 170);
+  font-size: 12px;
 
 
 }
@@ -86,6 +90,7 @@ img {
 main {
 
 
+  height: 100vh;
   display: flex;
   flex-direction: column;
   flex: 1;
@@ -131,9 +136,10 @@ input {
   width: 100%;
   height: 20px;
   font-size: 10px;
-  padding-left: 10px;
+  padding: 5px;
   border-radius: 10px;
   border: 2px solid rgb(238, 231, 231);
+  margin: 5px;
 
 
 }
@@ -143,17 +149,24 @@ input {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  height: 10%;
+  padding: 0px;
+  margin: none;
 }
 
 .chat-header {
   display: flex;
-  gap: 10px;
+  gap: 5px;
   align-items: center;
-  padding: 20px;
+  padding: 5px;
+}
+
+.time-header {
+  color: #5f5e5e;
 }
 
 .time {
-  font-size: 12px;
+  font-size: 10px;
   color: #646363;
 }
 
@@ -181,6 +194,53 @@ button {
 
   .chat-messages,
   .time {
+    font-size: 10px;
+  }
+
+  .margin-top {
+    max-width: 100%;
+    align-items: center;
+    font-size: 15px;
+    padding-bottom: 10px;
+    padding-top: 10px;
+    margin-left: 0px;
+    margin-bottom: 10px;
+    margin-top: 10px;
+  }
+
+  .chat-header {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 1px;
+    padding-left: 5px;
+    max-width: 70%;
+  }
+
+
+  .chat-footer {
+    max-width: 100%;
+  }
+}
+
+/*-----------pantalla tablet------------*/
+@media (max-width: 680px) {
+
+
+  .sidebar {
+    max-width: 100%;
+    font-size: 10px;
+    margin-left: 0px;
+    padding: 20px;
+  }
+
+  section .chat-messages {
+    margin: 0%;
+  }
+
+  .chat-messages,
+  .time,
+  .status {
     font-size: 10px;
   }
 
