--- a/style.css
+++ b/style.css
@@ -83,13 +83,20 @@ img {
   border-top: 2px solid rgb(176, 174, 174);
   border-bottom: 2px solid rgb(173, 170, 170);
   font-size: 12px;
+  font: bold;
 
 
 }
 
+ul {
+  font-size: 15px;
+}
+
+div {
+  padding-left: 5px;
+}
+
 main {
-
-
   height: 100vh;
   display: flex;
   flex-direction: column;
@@ -178,6 +185,7 @@ button {
   cursor: pointer;
 }
 
+
 /*----------- pantalla celular------------*/
 @media (max-width: 380px) {
   .sidebar {
@@ -190,6 +198,8 @@ button {
 
   section .chat-messages {
     margin: 0%;
+    max-width: 100vh;
+    height: 75%;
   }
 
   .chat-messages,
@@ -210,7 +220,7 @@ button {
 
   .chat-header {
     display: flex;
-    flex-direction: column;
+    font-size: 15px;
     align-items: flex-start;
     gap: 1px;
     padding-left: 5px;
