--- a/style.css
+++ b/style.css
@@ -21,14 +21,14 @@ img {
 .search {
   margin-bottom: 10px;
   padding: 5px;
-  margin-left: 20px;
+  margin-left: 10px;
   margin-right: 5px;
   width: 100%;
   border-radius: 5px;
   border-width: 0.5px;
   border-color: grey;
   color: grey;
-  margin-top: none;
+  margin-top: 10px;
 
 }
 
@@ -37,7 +37,7 @@ img {
   padding-right: 30px;
   padding-bottom: 30px;
   width: 20%;
-  border-right: 2px solid rgb(148, 146, 146);
+  border-right: 2px solid rgb(177, 175, 175);
 }
 
 .contact {
@@ -241,7 +241,13 @@ button {
     max-width: 100%;
     font-size: 10px;
     margin-left: 0px;
-    padding: 20px;
+    padding-right: 40px;
+    padding-left: 0px;
+    margin-right: 0px;
+  }
+
+  .search {
+    margin-left: 20px;
   }
 
   section .chat-messages {
@@ -258,18 +264,23 @@ button {
     max-width: 100%;
     align-items: center;
     font-size: 15px;
+    margin-top: 5px;
   }
 
   .chat-header {
     display: flex;
-    flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
     gap: 1px;
     max-width: 70%;
   }
 
   .chat-footer {
     max-width: 100%;
+  }
+
+  .contact-chavez {
+    display: flex;
+    gap: 4px;
   }
 
 
