--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ img {
   border-right: 2px solid rgb(177, 175, 175);
 }
 
+
 .contact {
   display: flex;
   align-items: center;
@@ -64,11 +65,13 @@ img {
 
 .status::before {
   content: "•";
+  font-size: 15px;
   color: red;
 }
 
 .status-online::before {
   content: "•";
+  font-size: 15px;
   color: green;
 }
 
@@ -79,12 +82,12 @@ img {
   flex-direction: column;
   margin-bottom: 10px;
   display: flex;
-  background-color: aquamarine;
+
   border-top: 2px solid rgb(176, 174, 174);
   border-bottom: 2px solid rgb(173, 170, 170);
   font-size: 12px;
   font: bold;
-
+  background-color: rgb(239, 244, 244);
 
 }
 
@@ -108,7 +111,7 @@ main {
   width: auto;
   margin-bottom: 0px;
   margin-left: auto;
-  margin-right: 2px;
+  margin-right: 5px;
   margin-top: 4px;
   gap: 15px;
   padding: 7px;
@@ -124,8 +127,8 @@ main {
   margin-right: auto;
   gap: 15px;
   padding: 7px;
-  margin-top: 2px;
-  margin-left: 2px;
+  margin-top: 3px;
+  margin-left: 5px;
   background-color: #b7f6c3;
   border-radius: 10px;
   white-space: nowrap;
@@ -159,6 +162,7 @@ input {
   height: 10%;
   padding: 0px;
   margin: none;
+
 }
 
 .chat-header {
@@ -183,6 +187,10 @@ button {
   font-size: 15px;
   padding: 1px;
   cursor: pointer;
+}
+
+button:hover {
+  transform: scale(1.5, 1.5);
 }
 
 
@@ -230,6 +238,16 @@ button {
 
   .chat-footer {
     max-width: 100%;
+  }
+
+
+  .contact-chavez {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .time-header {
+    font-size: 10px;
   }
 }
 
